# spotify-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd.yml
src/: app.rs  config.rs  main.rs  network.rs  user_config.rs
src/cli/: cli_app.rs
src/handlers/: input.rs  mod.rs  search_results.rs
src/ui/: mod.rs  util.rs
