[package]
name = "spotify-tui"
description = "A terminal user interface for Spotify"
homepage = "https://github.com/spotify-tui/spotify-tui"
documentation = "https://github.com/spotify-tui/spotify-tui"
repository = "https://github.com/spotify-tui/spotify-tui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.26.0"
authors = ["Alexander Keliris <rigellute@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.10.0"
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0.1"
clap = "2.34.0"
unicode-width = "0.1.8"
backtrace = "0.3.57"
arboard = "1.2.0"
crossterm = "0.20"
tokio = { version = "0.2", features = ["full"] }
rand = "0.8.5"
anyhow = "1.0.72"
ureq = {version = "2.0.0", features = ["json"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "spt"
